--- a/cpk-pentaho5/build.properties
+++ b/cpk-pentaho5/build.properties
@@ -1,12 +1,15 @@
-project.revision=TRUNK-SNAPSHOT
-# Stage: TRUNK | STABLE | BETA | other branch
+# project properties
+project.id=cpk-pentaho5
 project.stage=TRUNK
-# Version: a numeric value or SNAPSHOT. SNAPSHOT is replaced by DSTAMP
 project.version=SNAPSHOT
-ivy.artifact.id=cpk-pentaho5
-ivy.artifact.group=pentaho
+
+# do NOT change project.revision property, unless you really need to override it to a custom revision name
+project.revision=${project.stage}-${project.version}
+
+# ivy properties
 impl.title=Community Plugin Kickstarter
-# dependency.bi-platform.revision=4.8.0-stable
-dependency.bi-platform.revision=TRUNK-SNAPSHOT
-dependency.kettle.revision=5.0.1-stable
-dependency.pentaho-cpf-plugin.revision=REFACTOR-SNAPSHOT
+ivy.artifact.group=pentaho
+ivy.artifact.id=cpk-pentaho5
+dependency.pentaho-platform.revision=5.0.1-stable
+dependency.pentaho-kettle.revision=5.0.1-stable
+dependency.pentaho-cpf-plugin.revision=TRUNK-SNAPSHOT
