--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,25 @@
+nbbuild.xml
+manifest.mf
+/nbproject
 /nbproject/private/
+/cpk-core/nbproject
+/cpk-core/nbproject/private/
 /cpk-core/lib/
-/cpk-core/bin/
-/cpk-core/dist/
 /cpk-core/runtime-lib/
 /cpk-core/test-lib/
+/cpk-core/bin/
+/cpk-core/dist/
+/cpk-pentaho/nbproject
+/cpk-pentaho/nbproject/private/
 /cpk-pentaho/lib/
-/cpk-pentaho/bin/
-/cpk-pentaho/dist/
 /cpk-pentaho/runtime-lib/
 /cpk-pentaho/test-lib/
+/cpk-pentaho/bin/
+/cpk-pentaho/dist/
+/cpk-pentaho5/nbproject
+/cpk-pentaho5/nbproject/private/
 /cpk-pentaho5/lib/
-/cpk-pentaho5/bin/
-/cpk-pentaho5/dist/
 /cpk-pentaho5/runtime-lib/
 /cpk-pentaho5/test-lib/
-/build/
+/cpk-pentaho5/bin/
+/cpk-pentaho5/dist/
