--- a/cpk-pentaho/build.properties
+++ b/cpk-pentaho/build.properties
@@ -8,4 +8,4 @@ ivy.artifact.group=pentaho
 impl.title=Community Plugin Kickstarter
 dependency.bi-platform.revision=4.8.0-stable
 dependency.kettle.revision=4.4.0-stable
-dependency.pentaho-cpf-plugin.revision=REFACTOR-SNAPSHOT
+dependency.pentaho-cpf-plugin.revision=TRUNK-SNAPSHOT
