[CLEANUP] - Excluded unused ivy dependency

--- a/cpk-pentaho/ivy.xml
+++ b/cpk-pentaho/ivy.xml
@@ -30,6 +30,7 @@
     <dependency org="pentaho" name="pentaho-bi-platform-plugin-actions"
       			 rev="${dependency.bi-platform.revision}" changing="true" transitive="true" >
       			<exclude module="nekohtml" name="*" type="*" ext="*" conf="" matcher="exact"></exclude>
+      			<exclude module="pentaho-reporting-engine-classic-core" name="*" type="*" ext="*" conf="" matcher="exact"></exclude>
     </dependency>
 
 		<dependency org="org.codehaus.jackson" name="jackson-mapper-asl" rev="1.8.2" />
