--- a/cpk-core/ivy.xml
+++ b/cpk-core/ivy.xml
@@ -34,6 +34,7 @@
     <dependency org="log4j"                     name="log4j"                  rev="1.2.14"    transitive="false"/>
     <dependency org="org.codehaus.jackson"      name="jackson-core-asl"       rev="1.8.2"     transitive="false"/>
     <dependency org="org.codehaus.jackson"      name="jackson-mapper-asl"     rev="1.8.2"     transitive="false"/>
+    <dependency org="javax.ws.rs"               name="jsr311-api"             rev="1.1.1"     transitive="false"/>
     <dependency org="javax.servlet"             name="servlet-api"            rev="2.4"       transitive="false"/>
 
     <!-- dependencies for tests -->
