--- a/cpk-core/build.properties
+++ b/cpk-core/build.properties
@@ -1,15 +1,15 @@
 # project properties
 project.id=cpk-core
-project.stage=TRUNK
-project.version=SNAPSHOT
+project.stage=5.2
+project.version=5.2.0.0-209
 
 # do NOT change project.revision property, unless you really need to override it to a custom revision name
-project.revision=${project.stage}-${project.version}
+project.revision=5.2.0.0-209
 
 # ivy properties
 impl.title=Community Plugin Kickstarter
 ivy.artifact.group=pentaho
 ivy.artifact.id=cpk-core
-dependency.pentaho-platform.revision=4.8.0-stable
+dependency.pentaho-platform.revision=5.2.0.0-209
 dependency.pentaho-kettle.revision=4.4.0-stable
-dependency.pentaho-cpf-plugin.revision=TRUNK-SNAPSHOT
+dependency.pentaho-cpf-plugin.revision=5.2.0.0-209
