--- a/cpk-core/ivy.xml
+++ b/cpk-core/ivy.xml
@@ -38,7 +38,13 @@
     <dependency org="javax.servlet"             name="servlet-api"            rev="2.4"       transitive="false"/>
 
     <!-- dependencies for tests -->
+    <dependency org="org.mockito"         name="mockito-all"    rev="1.9.5"                                     conf="test->default"      transitive="false"/>
     <dependency org="pentaho-kettle"      name="kettle-db"      rev="${dependency.pentaho-kettle.revision}"     conf="test->default"      transitive="false"     changing="true"/>
+    <dependency org="javax.ws.rs"         name="jsr311-api"     rev="1.1.1"                                     conf="test->default"      transitive="false"/>
+
+    <dependency org="com.sun.jersey" name="jersey-core" rev="1.16" conf="test->default" transitive="false"/>
+    <dependency org="com.sun.jersey" name="jersey-client" rev="1.16" conf="test->default" transitive="false"/>
+
 
     <!--  third-party dependencies for tests -->
     <dependency org="commons-httpclient"          name="commons-httpclient"     rev='3.1'               conf="test->default"      transitive="false"/>
