--- a/cpk-pentaho/ivy.xml
+++ b/cpk-pentaho/ivy.xml
@@ -17,30 +17,54 @@
 	</publications>
 	<dependencies defaultconf="default->default">
 
-		<dependency org="pentaho" name="cpk-core" rev="${project.revision}" conf='default,runtime->default' transitive="false" changing="true"/>
+		<dependency org="pentaho" name="cpk-core"       rev="${project.revision}" conf='default,runtime->default' transitive="false" changing="true"/>
 
- 		<dependency org="pentaho"       name="cpf-core"
-		  rev="${dependency.pentaho-cpf-plugin.revision}" transitive="false" changing="true" conf='default,runtime->default'/>
-  		<dependency org="pentaho"       name="cpf-pentaho"
-		  rev="${dependency.pentaho-cpf-plugin.revision}" transitive="false" changing="true" conf='default,runtime->default'/>
+        <dependency org="pentaho" name="cpf-core"       rev="${dependency.pentaho-cpf-plugin.revision}"  conf='default,runtime->default' transitive="false" changing="true" />
+  		<dependency org="pentaho" name="cpf-pentaho"    rev="${dependency.pentaho-cpf-plugin.revision}"  conf='default,runtime->default' transitive="false" changing="true" />
 
-    <dependency org="pentaho" name="pentaho-bi-platform-web-servlet"
-                rev="${dependency.bi-platform.revision}" transitive="false"  changing="true"/>
+        <dependency org="pentaho" name="pentaho-bi-platform-api"                rev="${dependency.bi-platform.revision}" transitive="false" />
+        <dependency org="pentaho" name="pentaho-bi-platform-engine-core"        rev="${dependency.bi-platform.revision}" transitive="false" />
+        <dependency org="pentaho" name="pentaho-bi-platform-engine-services"    rev="${dependency.bi-platform.revision}" transitive="false" />
 
-    <dependency org="pentaho" name="pentaho-bi-platform-plugin-actions"
-      			 rev="${dependency.bi-platform.revision}" changing="true" transitive="true" >
-      			<exclude module="nekohtml" name="*" type="*" ext="*" conf="" matcher="exact"></exclude>
-      			<exclude module="pentaho-reporting-engine-classic-core" name="*" type="*" ext="*" conf="" matcher="exact"></exclude>
-      			<exclude module="pentaho-publisher" name="*" type="*" ext="*" conf="" matcher="exact"></exclude>
-    </dependency>
+        <dependency org="javax.servlet" name="servlet-api" rev="2.4" transitive="false" />
 
-		<dependency org="org.codehaus.jackson" name="jackson-mapper-asl" rev="1.8.2" />
+        <dependency org="commons-io"           name="commons-io"          rev="1.4"   transitive="false" />
+        <dependency org="commons-lang"         name="commons-lang"        rev="2.4"   transitive="false" />
+        <dependency org="commons-logging"      name="commons-logging-api" rev="1.0.4" transitive="false" />
+        <dependency org="dom4j"                name="dom4j"               rev="1.6.1" transitive="false" />
+        <dependency org="org.codehaus.jackson" name="jackson-core-asl"    rev="1.8.2" transitive="false" />
+        <dependency org="org.codehaus.jackson" name="jackson-mapper-asl"  rev="1.8.2" transitive="false" />
 
-    <dependency org="net.sf.ehcache"            name="ehcache-core"         rev="2.5.1" transitive="false"      conf="test->default"/>
-    <dependency org="org.slf4j"                 name="slf4j-log4j12"        rev="1.6.1" transitive="false"      conf="test->default"/>
-        
-		<dependency org="junit" name="junit" transitive="false" conf="test->default" rev='4.10'/>
-		<dependency org="spring" name="spring-mock" transitive="false" rev="1.0.2" conf="test->default"/>
-		
-  </dependencies>
+
+        <!-- Test Dependencies -->
+        <dependency org="pentaho" name="pentaho-bi-platform-util"               rev="${dependency.bi-platform.revision}"  conf="test->default" transitive="false"/>
+        <dependency org="pentaho" name="pentaho-bi-platform-engine-security"    rev="${dependency.bi-platform.revision}"  conf="test->default" transitive="false"/>
+        <dependency org="pentaho" name="pentaho-bi-platform-plugin-services"    rev="${dependency.bi-platform.revision}"  conf="test->default" transitive="false"/>
+
+        <dependency org="pentaho-kettle"    name="kettle-core"      rev="${dependency.kettle.revision}"     conf="test->default"      transitive="false" />
+        <dependency org="pentaho-kettle"    name="kettle-engine"    rev="${dependency.kettle.revision}"     conf="test->default"      transitive="false" />
+        <dependency org="pentaho-kettle"    name="kettle-db"        rev="${dependency.kettle.revision}"     conf="test->default"      transitive="false" />
+
+        <dependency org="org.springframework"           name="spring-beans"         rev="2.5.6"         conf="test->default"    transitive="false"/>
+        <dependency org="org.springframework"           name="spring-core"          rev="2.5.6"         conf="test->default"    transitive="false"/>
+        <dependency org="org.springframework"           name="spring-context"       rev="2.5.6"         conf="test->default"    transitive="false"/>
+        <dependency org="spring"                        name="spring-mock"          rev="1.0.2"         conf="test->default"    transitive="false" />
+        <dependency org="org.springframework.security"  name="spring-security-core" rev="2.0.5.RELEASE" conf="test->default"    transitive="false" />
+
+        <dependency org="commons-httpclient"         name="commons-httpclient"       rev="3.0.1"             conf="test->default"      transitive="false" />
+        <dependency org="commons-collections"        name="commons-collections"      rev="3.0"               conf="test->default"      transitive="false"/>
+        <dependency org="commons-vfs"                name="commons-vfs"              rev="1.0"               conf="test->default"      transitive="false"/>
+
+        <dependency org="net.sf.ehcache"             name="ehcache-core"         rev="2.5.1"       conf="test->default" transitive="false" />
+        <dependency org="org.slf4j"                  name="slf4j-log4j12"        rev="1.7.7"       conf="test->default" transitive="false" />
+        <dependency org="org.slf4j"                  name="slf4j-api"            rev="1.7.7"       conf="test->default" transitive="false" />
+        <dependency org="log4j"                      name="log4j"                rev="1.2.9"       conf="test->default" transitive="false" />
+
+		<dependency org="junit"                      name="junit"       rev='4.10'  conf="test->default" transitive="false" />
+        <dependency org="org.json"                   name="json"        rev="3.1.1" conf="test->default" transitive="false" />
+        <dependency org="org.mozilla"                name="rhino"       rev="1.7R4" conf="test->default" transitive="false" />
+        <dependency org="com.googlecode.json-simple" name="json-simple" rev="1.1.1" conf="test->default" transitive="false" />
+        <dependency org="jaxen"                      name="jaxen"       rev="1.1.6" conf="test->default" transitive="false" />
+
+    </dependencies>
 </ivy-module>
