--- a/cpk-pentaho5/build.properties
+++ b/cpk-pentaho5/build.properties
@@ -1,15 +1,15 @@
 # project properties
 project.id=cpk-pentaho5
-project.stage=TRUNK
-project.version=SNAPSHOT
+project.stage=5.2.0.1
+project.version=5.2.0.1-218
 
 # do NOT change project.revision property, unless you really need to override it to a custom revision name
-project.revision=${project.stage}-${project.version}
+project.revision=5.2.0.1-218
 
 # ivy properties
 impl.title=Community Plugin Kickstarter
 ivy.artifact.group=pentaho
 ivy.artifact.id=cpk-pentaho5
-dependency.pentaho-platform.revision=5.0.1-stable
+dependency.pentaho-platform.revision=5.2.0.1-218
 dependency.pentaho-kettle.revision=5.0.1-stable
-dependency.pentaho-cpf-plugin.revision=TRUNK-SNAPSHOT
+dependency.pentaho-cpf-plugin.revision=5.2.0.1-218
