[SPARKL-121] - Changed build properties

--- a/cpk-pentaho5/build.properties
+++ b/cpk-pentaho5/build.properties
@@ -1,7 +1,7 @@
 # project properties
 project.id=cpk-pentaho5
-project.stage=TRUNK
-project.version=SNAPSHOT
+project.stage=STABLE
+project.version=SDR
 
 # do NOT change project.revision property, unless you really need to override it to a custom revision name
 project.revision=${project.stage}-${project.version}
