--- a/cpk-pentaho/build.properties
+++ b/cpk-pentaho/build.properties
@@ -1,11 +1,11 @@
-project.revision=TRUNK-SNAPSHOT
+project.revision=5.3.0.0-213
 # Stage: TRUNK | STABLE | BETA | other branch
-project.stage=TRUNK
+project.stage=5.3
 # Version: a numeric value or SNAPSHOT. SNAPSHOT is replaced by DSTAMP
-project.version=SNAPSHOT
+project.version=5.3.0.0-213
 ivy.artifact.id=cpk-pentaho
 ivy.artifact.group=pentaho
 impl.title=Community Plugin Kickstarter
-dependency.bi-platform.revision=4.8.0-stable
-dependency.kettle.revision=4.4.0-stable
-dependency.pentaho-cpf-plugin.revision=TRUNK-SNAPSHOT
+dependency.bi-platform.revision=5.3.0.0-213
+dependency.kettle.revision=5.3.0.0-213
+dependency.pentaho-cpf-plugin.revision=5.3.0.0-213
