[CLEANUP] - Fixing 4.x build

--- a/cpk-pentaho/build.properties
+++ b/cpk-pentaho/build.properties
@@ -6,6 +6,6 @@ project.version=6.0-SNAPSHOT
 ivy.artifact.id=cpk-pentaho
 ivy.artifact.group=pentaho
 impl.title=Community Plugin Kickstarter
-dependency.bi-platform.revision=6.0-SNAPSHOT
-dependency.kettle.revision=6.0-SNAPSHOT
+dependency.bi-platform.revision=4.8.0-stable
+dependency.kettle.revision=4.4.0-stable
 dependency.pentaho-cpf-plugin.revision=6.0-SNAPSHOT
