--- a/cpk-pentaho5/build.properties
+++ b/cpk-pentaho5/build.properties
@@ -1,15 +1,15 @@
 # project properties
 project.id=cpk-pentaho5
-project.stage=5.4
-project.version=5.4-SNAPSHOT
+project.stage=5.4.0.2
+project.version=5.4.0.2-142
 
 # do NOT change project.revision property, unless you really need to override it to a custom revision name
-project.revision=5.4-SNAPSHOT
+project.revision=5.4.0.2-142
 
 # ivy properties
 impl.title=Community Plugin Kickstarter
 ivy.artifact.group=pentaho
 ivy.artifact.id=cpk-pentaho5
-dependency.pentaho-platform.revision=5.4-SNAPSHOT
+dependency.pentaho-platform.revision=5.4.0.2-142
 dependency.pentaho-kettle.revision=5.0.1-stable
-dependency.pentaho-cpf-plugin.revision=5.4-SNAPSHOT
+dependency.pentaho-cpf-plugin.revision=5.4.0.2-142
