--- a/cpk-core/build.properties
+++ b/cpk-core/build.properties
@@ -13,3 +13,5 @@ ivy.artifact.id=cpk-core
 dependency.pentaho-platform.revision=6.0-SNAPSHOT
 dependency.pentaho-kettle.revision=4.4.0-stable
 dependency.pentaho-cpf-plugin.revision=6.0-SNAPSHOT
+dependency.spring.framework.revision=3.2.14.RELEASE
+dependency.spring.mock.revision=2.0.8
