--- a/cpk-pentaho/ivy.xml
+++ b/cpk-pentaho/ivy.xml
@@ -45,11 +45,11 @@
         <dependency org="pentaho-kettle"    name="kettle-engine"    rev="${dependency.kettle.revision}"     conf="test->default"      transitive="false" />
         <dependency org="pentaho-kettle"    name="kettle-db"        rev="${dependency.kettle.revision}"     conf="test->default"      transitive="false" />
 
-        <dependency org="org.springframework"           name="spring-beans"         rev="2.5.6"         conf="test->default"    transitive="false"/>
-        <dependency org="org.springframework"           name="spring-core"          rev="2.5.6"         conf="test->default"    transitive="false"/>
-        <dependency org="org.springframework"           name="spring-context"       rev="2.5.6"         conf="test->default"    transitive="false"/>
-        <dependency org="spring"                        name="spring-mock"          rev="1.0.2"         conf="test->default"    transitive="false" />
-        <dependency org="org.springframework.security"  name="spring-security-core" rev="2.0.5.RELEASE" conf="test->default"    transitive="false" />
+        <dependency org="org.springframework"           name="spring-beans"         rev="2.5.6"         conf="test->default"    transitive="false" force="true"/>
+        <dependency org="org.springframework"           name="spring-core"          rev="2.5.6"         conf="test->default"    transitive="false" force="true"/>
+        <dependency org="org.springframework"           name="spring-context"       rev="2.5.6"         conf="test->default"    transitive="false" force="true"/>
+        <dependency org="spring"                        name="spring-mock"          rev="1.0.2"         conf="test->default"    transitive="false" force="true"/>
+        <dependency org="org.springframework.security"  name="spring-security-core" rev="2.0.5.RELEASE" conf="test->default"    transitive="false" force="true"/>
 
         <dependency org="commons-httpclient"         name="commons-httpclient"       rev="3.0.1"             conf="test->default"      transitive="false" />
         <dependency org="commons-collections"        name="commons-collections"      rev="3.0"               conf="test->default"      transitive="false"/>
