--- a/cpk-pentaho5/build.properties
+++ b/cpk-pentaho5/build.properties
@@ -13,3 +13,6 @@ ivy.artifact.id=cpk-pentaho5
 dependency.pentaho-platform.revision=6.0-SNAPSHOT
 dependency.pentaho-kettle.revision=5.0.1-stable
 dependency.pentaho-cpf-plugin.revision=6.0-SNAPSHOT
+dependency.spring.framework.revision=3.2.14.RELEASE
+dependency.spring.security.revision=2.0.8.RELEASE
+dependency.spring.mock.revision=2.0.8
