[SPARKL-159] - Updated several dependencies to in order to have CPK using the upgraded VFS2 in kettle

--- a/cpk-pentaho5/build.properties
+++ b/cpk-pentaho5/build.properties
@@ -11,7 +11,7 @@ impl.title=Community Plugin Kickstarter
 ivy.artifact.group=pentaho
 ivy.artifact.id=cpk-pentaho5
 dependency.pentaho-platform.revision=6.0-SNAPSHOT
-dependency.pentaho-kettle.revision=5.0.1-stable
+dependency.pentaho-kettle.revision=${project.revision}
 dependency.pentaho-cpf-plugin.revision=6.0-SNAPSHOT
 dependency.spring.framework.revision=3.2.14.RELEASE
 dependency.spring.security.revision=2.0.8.RELEASE
