--- a/cpk-core/build.properties
+++ b/cpk-core/build.properties
@@ -11,7 +11,8 @@ impl.title=Community Plugin Kickstarter
 ivy.artifact.group=pentaho
 ivy.artifact.id=cpk-core
 dependency.pentaho-platform.revision=6.0-SNAPSHOT
-dependency.pentaho-kettle.revision=4.4.0-stable
+dependency.pentaho-kettle.revision=${project.revision}
+dependency.pentaho-metastore.revision=${project.revision}
 dependency.pentaho-cpf-plugin.revision=6.0-SNAPSHOT
 dependency.spring.framework.revision=3.2.14.RELEASE
 dependency.spring.mock.revision=2.0.8
