--- a/cpk-core/ivy.xml
+++ b/cpk-core/ivy.xml
@@ -25,21 +25,23 @@
     <dependency org="pentaho-kettle"      name="kettle-engine"      rev="${dependency.pentaho-kettle.revision}"                                          transitive="false"    changing="true"/>
 
     <!-- third party dependencies -->
-    <dependency org="commons-io"                name="commons-io"             rev="2.4"       transitive="false"/>
-    <dependency org="commons-lang"              name="commons-lang"           rev="2.6"       transitive="false"/>
-    <dependency org="commons-logging"           name="commons-logging"        rev="1.1.1"     transitive="false"/>
-    <dependency org="commons-vfs"               name="commons-vfs"            rev="1.0"       transitive="false"/>
-    <dependency org="dom4j"                     name="dom4j"                  rev="1.6.1"     transitive="false"/>
-    <dependency org="net.sf.ehcache"            name="ehcache-core"           rev="2.5.1"     transitive="false"/>
-    <dependency org="log4j"                     name="log4j"                  rev="1.2.14"    transitive="false"/>
-    <dependency org="org.codehaus.jackson"      name="jackson-core-asl"       rev="1.8.2"     transitive="false"/>
-    <dependency org="org.codehaus.jackson"      name="jackson-mapper-asl"     rev="1.8.2"     transitive="false"/>
-    <dependency org="javax.ws.rs"               name="jsr311-api"             rev="1.1.1"     transitive="false"/>
-    <dependency org="javax.servlet"             name="servlet-api"            rev="2.4"       transitive="false"/>
+    <dependency org="commons-io"                name="commons-io"             rev="2.4"             transitive="false"/>
+    <dependency org="commons-lang"              name="commons-lang"           rev="2.6"             transitive="false"/>
+    <dependency org="commons-logging"           name="commons-logging"        rev="1.1.1"           transitive="false"/>
+    <dependency org="org.apache.commons"        name="commons-vfs2"           rev="2.1-20150824"    transitive="false"/>
+    <dependency org="dom4j"                     name="dom4j"                  rev="1.6.1"           transitive="false"/>
+    <dependency org="net.sf.ehcache"            name="ehcache-core"           rev="2.5.1"           transitive="false"/>
+    <dependency org="log4j"                     name="log4j"                  rev="1.2.14"          transitive="false"/>
+    <dependency org="org.codehaus.jackson"      name="jackson-core-asl"       rev="1.8.2"           transitive="false"/>
+    <dependency org="org.codehaus.jackson"      name="jackson-mapper-asl"     rev="1.8.2"           transitive="false"/>
+    <dependency org="javax.ws.rs"               name="jsr311-api"             rev="1.1.1"           transitive="false"/>
+    <dependency org="javax.servlet"             name="servlet-api"            rev="2.4"             transitive="false"/>
 
     <!-- dependencies for tests -->
     <dependency org="org.mockito"         name="mockito-all"    rev="1.9.5"                                     conf="test->default"      transitive="false"/>
+    <!--
     <dependency org="pentaho-kettle"      name="kettle-db"      rev="${dependency.pentaho-kettle.revision}"     conf="test->default"      transitive="false"     changing="true"/>
+-->
     <dependency org="javax.ws.rs"         name="jsr311-api"     rev="1.1.1"                                     conf="test->default"      transitive="false"/>
 
     <dependency org="com.sun.jersey" name="jersey-core" rev="1.16" conf="test->default" transitive="false"/>
@@ -47,6 +49,11 @@
 
 
     <!--  third-party dependencies for tests -->
+    <dependency org="com.google.guava" name="guava" rev="17.0" conf="test->default"/>
+     <dependency org="pentaho"             name="metastore"           rev="${dependency.pentaho-metastore.revision}"  conf="test->default" changing="true" />
+    <!-- FIXME: UPDATE Tests to rely only on vfs2 -->
+    <dependency org="commons-vfs"                     name="commons-vfs"              rev="1.0"         conf="test->default"      transitive="false"/>
+
     <dependency org="commons-httpclient"          name="commons-httpclient"     rev='3.1'               conf="test->default"      transitive="false"/>
     <dependency org="jaxen"                       name="jaxen"                  rev="1.1"               conf="test->default"      transitive="false"/>
     <dependency org="org.json"                    name="json"                   rev="20090211"          conf="test->default"      transitive="false"/>
