--- a/cpk-pentaho5/ivy.xml
+++ b/cpk-pentaho5/ivy.xml
@@ -47,7 +47,9 @@
     <!-- third-party dependencies for tests -->
     <dependency org="commons-collections"             name="commons-collections"      rev="3.0"               conf="test->default"      transitive="false"/>
     <dependency org="commons-httpclient"              name="commons-httpclient"       rev='3.1'               conf="test->default"      transitive="false"/>
+    <!-- FIXME: UPDATE Tests to rely only on vfs2 -->
     <dependency org="commons-vfs"                     name="commons-vfs"              rev="1.0"               conf="test->default"      transitive="false"/>
+    <!-- <dependency org="org.apache.commons"              name="commons-vfs2"             rev="2.1-20150824"      conf="test->default"      transitive="false"/> -->
     <dependency org="net.sf.ehcache"                  name="ehcache-core"             rev="2.5.1"             conf="test->default"      transitive="false"/>
     <dependency org="jaxen"                           name="jaxen"                    rev="1.1"               conf="test->default"      transitive="false"/>
     <dependency org="org.safehaus.jug"                name="jug"                      rev='2.0.0'             conf="test->default"      transitive="false">
