--- a/cpk-pentaho/build.properties
+++ b/cpk-pentaho/build.properties
@@ -1,11 +1,11 @@
-project.revision=6.0-SNAPSHOT
+project.revision=6.0.1.0-386
 # Stage: TRUNK | STABLE | BETA | other branch
-project.stage=future-develop
+project.stage=6.0.1.0
 # Version: a numeric value or SNAPSHOT. SNAPSHOT is replaced by DSTAMP
-project.version=6.0-SNAPSHOT
+project.version=6.0.1.0-386
 ivy.artifact.id=cpk-pentaho
 ivy.artifact.group=pentaho
 impl.title=Community Plugin Kickstarter
-dependency.bi-platform.revision=4.8.0-stable
-dependency.kettle.revision=4.4.0-stable
-dependency.pentaho-cpf-plugin.revision=6.0-SNAPSHOT
+dependency.bi-platform.revision=6.0.1.0-386
+dependency.kettle.revision=6.0.1.0-386
+dependency.pentaho-cpf-plugin.revision=6.0.1.0-386
