Create tag from build job '6.0-nightly/cpk-plugin' b318, source branch '6.0.1.1'

--- a/cpk-pentaho/build.properties
+++ b/cpk-pentaho/build.properties
@@ -1,11 +1,11 @@
-project.revision=6.0-SNAPSHOT
+project.revision=6.0.1.1-398
 # Stage: TRUNK | STABLE | BETA | other branch
-project.stage=future-develop
+project.stage=6.0.1.1
 # Version: a numeric value or SNAPSHOT. SNAPSHOT is replaced by DSTAMP
-project.version=6.0-SNAPSHOT
+project.version=6.0.1.1-398
 ivy.artifact.id=cpk-pentaho
 ivy.artifact.group=pentaho
 impl.title=Community Plugin Kickstarter
-dependency.bi-platform.revision=4.8.0-stable
-dependency.kettle.revision=4.4.0-stable
-dependency.pentaho-cpf-plugin.revision=6.0-SNAPSHOT
+dependency.bi-platform.revision=6.0.1.1-398
+dependency.kettle.revision=6.0.1.1-398
+dependency.pentaho-cpf-plugin.revision=6.0.1.1-398
