--- a/cpk-core/build.properties
+++ b/cpk-core/build.properties
@@ -1,18 +1,18 @@
 # project properties
 project.id=cpk-core
-project.stage=future-develop
-project.version=6.0-SNAPSHOT
+project.stage=6.0.1.1
+project.version=6.0.1.1-398
 
 # do NOT change project.revision property, unless you really need to override it to a custom revision name
-project.revision=6.0-SNAPSHOT
+project.revision=6.0.1.1-398
 
 # ivy properties
 impl.title=Community Plugin Kickstarter
 ivy.artifact.group=pentaho
 ivy.artifact.id=cpk-core
-dependency.pentaho-platform.revision=6.0-SNAPSHOT
+dependency.pentaho-platform.revision=6.0.1.1-398
 dependency.pentaho-kettle.revision=${project.revision}
-dependency.pentaho-metastore.revision=${project.revision}
-dependency.pentaho-cpf-plugin.revision=6.0-SNAPSHOT
+dependency.pentaho-metastore.revision=6.0.1.1-398
+dependency.pentaho-cpf-plugin.revision=6.0.1.1-398
 dependency.spring.framework.revision=3.2.14.RELEASE
 dependency.spring.mock.revision=2.0.8
