--- a/cpk-core/build.properties
+++ b/cpk-core/build.properties
@@ -1,15 +1,15 @@
 # project properties
 project.id=cpk-core
-project.stage=5.4
-project.version=5.4-SNAPSHOT
+project.stage=5.4.1.3
+project.version=5.4.1.3-175
 
 # do NOT change project.revision property, unless you really need to override it to a custom revision name
-project.revision=5.4-SNAPSHOT
+project.revision=5.4.1.3-175
 
 # ivy properties
 impl.title=Community Plugin Kickstarter
 ivy.artifact.group=pentaho
 ivy.artifact.id=cpk-core
-dependency.pentaho-platform.revision=5.4-SNAPSHOT
+dependency.pentaho-platform.revision=5.4.1.3-175
 dependency.pentaho-kettle.revision=4.4.0-stable
-dependency.pentaho-cpf-plugin.revision=5.4-SNAPSHOT
+dependency.pentaho-cpf-plugin.revision=5.4.1.3-175
