--- a/cpk-pentaho5/build.properties
+++ b/cpk-pentaho5/build.properties
@@ -1,18 +1,18 @@
 # project properties
 project.id=cpk-pentaho5
-project.stage=master
-project.version=6.1-SNAPSHOT
+project.stage=6.1.0.2
+project.version=6.1.0.2-208
 
 # do NOT change project.revision property, unless you really need to override it to a custom revision name
-project.revision=6.1-SNAPSHOT
+project.revision=6.1.0.2-208
 
 # ivy properties
 impl.title=Community Plugin Kickstarter
 ivy.artifact.group=pentaho
 ivy.artifact.id=cpk-pentaho5
-dependency.pentaho-platform.revision=6.1-SNAPSHOT
+dependency.pentaho-platform.revision=6.1.0.2-208
 dependency.pentaho-kettle.revision=${project.revision}
-dependency.pentaho-cpf-plugin.revision=6.1-SNAPSHOT
+dependency.pentaho-cpf-plugin.revision=6.1.0.2-208
 dependency.spring.framework.revision=3.2.14.RELEASE
 dependency.spring.security.revision=2.0.8.RELEASE
 dependency.spring.mock.revision=2.0.8
