--- a/cpk-core/build.properties
+++ b/cpk-core/build.properties
@@ -11,7 +11,7 @@ impl.title=Community Plugin Kickstarter
 ivy.artifact.group=pentaho
 ivy.artifact.id=cpk-core
 dependency.pentaho-platform.revision=7.0-SNAPSHOT
-dependency.pentaho-kettle.revision=${project.revision}
+dependency.kettle.revision=7.0-SNAPSHOT
 dependency.pentaho-metastore.revision=7.0-SNAPSHOT
 dependency.pentaho-cpf-plugin.revision=7.0-SNAPSHOT
 dependency.spring.framework.revision=3.2.14.RELEASE
