--- a/cpk-core/ivy.xml
+++ b/cpk-core/ivy.xml
@@ -21,8 +21,8 @@
 
     <!-- dependencies -->
     <dependency org="pentaho"             name="cpf-core"           rev="${dependency.pentaho-cpf-plugin.revision}"     conf="runtime,test->default"     transitive="false"    changing="true"/>
-    <dependency org="pentaho-kettle"      name="kettle-core"        rev="${dependency.pentaho-kettle.revision}"                                          transitive="false"    changing="true"/>
-    <dependency org="pentaho-kettle"      name="kettle-engine"      rev="${dependency.pentaho-kettle.revision}"                                          transitive="false"    changing="true"/>
+    <dependency org="pentaho-kettle"      name="kettle-core"        rev="${dependency.kettle.revision}"                                          transitive="false"    changing="true"/>
+    <dependency org="pentaho-kettle"      name="kettle-engine"      rev="${dependency.kettle.revision}"                                          transitive="false"    changing="true"/>
 
     <!-- third party dependencies -->
     <dependency org="commons-io"                name="commons-io"             rev="2.4"             transitive="false"/>
