--- a/cpk-pentaho5/ivy.xml
+++ b/cpk-pentaho5/ivy.xml
@@ -40,8 +40,8 @@
     <dependency org="javax.servlet"                 name="servlet-api"            rev="2.4"       transitive="false"/>
 
     <!-- dependencies for tests -->
-    <dependency org="pentaho-kettle"    name="kettle-core"                    rev="${dependency.pentaho-kettle.revision}"     conf="test->default"      transitive="false"    changing="true"/>
-    <dependency org="pentaho-kettle"    name="kettle-engine"                  rev="${dependency.pentaho-kettle.revision}"     conf="test->default"      transitive="false"    changing="true"/>
+    <dependency org="pentaho-kettle"    name="kettle-core"                    rev="${dependency.kettle.revision}"     conf="test->default"      transitive="false"    changing="true"/>
+    <dependency org="pentaho-kettle"    name="kettle-engine"                  rev="${dependency.kettle.revision}"     conf="test->default"      transitive="false"    changing="true"/>
     <dependency org="pentaho"           name="pentaho-platform-extensions"    rev="${dependency.pentaho-platform.revision}"   conf="test->default"      transitive="false"    changing="true"/>
 
     <!-- third-party dependencies for tests -->
