--- a/cpk-pentaho5/build.properties
+++ b/cpk-pentaho5/build.properties
@@ -11,7 +11,7 @@ impl.title=Community Plugin Kickstarter
 ivy.artifact.group=pentaho
 ivy.artifact.id=cpk-pentaho5
 dependency.pentaho-platform.revision=6.1-SNAPSHOT
-dependency.pentaho-kettle.revision=${project.revision}
+dependency.kettle.revision=6.1-SNAPSHOT
 dependency.pentaho-cpf-plugin.revision=6.1-SNAPSHOT
 dependency.spring.framework.revision=3.2.14.RELEASE
 dependency.spring.security.revision=2.0.8.RELEASE
